<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SeTrip</string>
    <string name="splashscreen_about">Secure yourself during Trip</string>
    <string name="berbagai_wisata_menarik_ntelah_tersedia_untuk_anda">Berbagai wisata menarik\ntelah tersedia untuk Anda</string>
    <string name="hint_inputemail">Email</string>
    <string name="login">Login</string>
    <string name="lupa_password">Lupa password</string>
    <string name="mendaftar">Mendaftar</string>
    <string name="register_purpose">Mendaftar secara gratis hingga kapanpun\nbersama SeTrip</string>
    <string name="imput_nama">Nama lengkap</string>
    <string name="sign_up">Sign Up</string>
    <string name="konfirmasi_email">Konfirmasi email</string>
    <string name="invalid_name">Maaf, nama tidak valid</string>
    <string name="title_register">Registrasi</string>
    <string name="invalid_email">Maaf, email tidak valid</string>
    <string name="invalid_phonenbr">Maaf, nomor telepon tidak valid</string>
    <string name="trouble">Maaf terdapat gangguan pada sistem</string>
    <string name="berhasil">Selamat, akun anda berhasil terdaftar</string>
    <string name="konfirmasi_keluar_aplikasi">Konfirmasi keluar aplikasi</string>
    <string name="apakah_anda_yakin">"Anda yakin ingin keluar aplikasi ? "</string>
    <string name="ya">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="maaf_password_anda_tidak_valid">Maaf, password anda tidak valid</string>
    <string name="trouble1">Maaf, Email atau password anda salah, dan Pastikan Anda Terhubung dengan Internet</string>
    <string name="welcome">Selamat datang di SeTrip</string>
    <string name="forgotpassword_purpose">Masukkan email anda\nyang sudah terdaftar untuk mendapat pesan\npengubahan password</string>
    <string name="success2">Sukses, silahkan buka Email/Gmail anda untuk ubah kata sandi</string>
    <string name="beranda">Beranda</string>
    <string name="tourism">Temukan wisata</string>
    <string name="profil">Profil</string>
    <string name="temukan_wisata">Temukan wisata</string>
    <string name="nomor_handphone">Nomor handphone</string>
    <string name="image" translatable="false">image</string>
    <string name="option">Option</string>
    <string name="username_user">Username user</string>
    <string name="logout">Logout</string>
    <string name="selamat_waktu">Selamat waktu</string>
    <string name="jangan_lupa_untuk_nikmati_waktumu">Jangan lupa untuk nikmati waktumu</string>
    <string name="email_user">email.123@email.com</string>
    <string name="setting_profile_page">Pengaturan profil</string>
    <string name="buat_catatan">Buat catatan / pengingat</string>
    <string name="tampilkan_lokasi">Lihat seluruh lokasi Objek wisata</string>
    <string name="map_key" translatable="false">AIzaSyAJ6655TnlgGC0S2eB2_32nb2oZZxAm6rg</string>
    <string name="selamat_malam">Selamat Malam</string>
    <string name="selamat_pagi">Selamat Pagi</string>
    <string name="selamat_siang">Selamat Siang</string>
    <string name="pilih_mode">Pilih mode pengambilan gambar</string>
    <string name="mohon_setujui_kamera">Mohon setujui permission kamera</string>
    <string name="mohon_setujui_galeri">Mohon setujui permission Penyimpanan</string>
    <string name="gambar_diperbarui">Gambar berhasil diperbarui</string>
    <string name="gambar_tidak">Maaf, upload tidak berhasil</string>
    <string name="gangguan">Maaf, terdapat gangguan ketika upload</string>
    <string name="judul_catatan">Judul catatan</string>
    <string name="title_empty">Judul tidak boleh kosong</string>
    <string name="message_empty">Pesan tidak boleh kosong</string>
    <string name="pilih">Pilih sebuah aksi</string>
    <string name="email">Email</string>
    <string name="phone_number">Nomor handphone</string>
    <string name="clearing_file">Membuat catatan baru</string>
    <string name="pengingatmu">Pengingatmu</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="ganti_bahasa">Ganti bahasa</string>
    <string name="ubah_username">Ubah username</string>
    <string name="nama_pengguna">Nama pengguna</string>
    <string name="setel_pengingat">Setel pengingat</string>
    <string name="silahkan_masukkan_nama_anda">Silahkan masukkan nama anda</string>
    <string name="batal">Batal</string>
    <string name="konfirmasi">konfirmasi</string>
    <string name="data_diperbarui">data anda diperbarui</string>
    <string name="bahasa">Bahasa</string>
    <string name="add_new_post">Buat postingan baru</string>
    <string name="masukkan_judul">Masukkan judul</string>
    <string name="masukkan_deskripsi">Masukkan deskripsi</string>
    <string name="unggah_postingan">Unggah postingan</string>
    <string name="post_published">Postingan berhasil dbuat</string>
    <string name="nama">Nama</string>
    <string name="maaf1">Tidak berhasil menghapus postingan</string>
    <string name="berhasil_menghapus">Berhasil menghapus postingan</string>
    <string name="menyukai">Menyukai</string>
    <string name="tidak_menyukai">Tidak menyukai</string>
    <string name="detail_post">Detail postingan</string>
    <string name="komentar_kosong">Komentar tidak boleh kosong</string>
    <string name="komentar_ditambahkan">Komentar ditambahkan</string>
    <string name="komentar_tidak_ditambahkan">Komentar tidak berhasil ditambahkan</string>
    <string name="hapus">Hapus</string>
    <string name="komentar">Komentar</string>
    <string name="tab_text_1">Info Wisata</string>
    <string name="tab_text_2">Info Covid-19</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kondisi_covid_19_di_indonesia_saat_ini">Kondisi Covid-19 di Indonesia saat ini</string>
    <string name="kasus_terinfeksi">Kasus terinfeksi</string>
    <string name="pasien_sembuh">Pasien sembuh</string>
    <string name="pasien_meninggal">Pasien meninggal</string>
    <string name="apa_yang_anda_inginkan">Apa yang anda inginkan</string>
    <string name="lapor_covid_19">Lapor Covid-19</string>
    <string name="membantu_anda">Membantu anda untuk melaporkan kondisi anda maupun sekitar secara cepat</string>
    <string name="anda_wajib_membaca_ini">anda wajib membaca ini</string>
    <string name="tips_wisata_aman">Tips Wisata Aman</string>
    <string name="deskripsi_masker">Selama liburan atau berada di luar ruangan, selalu gunakan masker. Covid-19 merupakan kelompok virus yang menyerang saluran pernapasan, dan menular melalui droplet (tetesan) ludah yang keluar saat sedang berbicara, bersin, atau batuk. Masker dapat menyerap air, sehingga bisa menyerap droplet yang keluar dari mulut maupun hidung.</string>
    <string name="deskripsi_cuci_tangan">tips traveling aman yang dapat mencegahnya dapat dilakukan dengan rajin mencuci tangan secara rutin. Jangan lupa juga untuk menggunakan cairan hand sanitizer kemanapun. Gunakan sebelum makan, menyentuh wajah, atau setelah memegang benda asing.</string>
    <string name="deskripsi_cek_kesehatan">Sebelum bepergian, saat tiba di destinasi tujuan, atau pulang kembali ke rumah terlebih dahulu memeriksa kesehatan diri. Bila diperlukan, bawa termometer untuk memantau kondisi tubuh sepanjang perjalanan.</string>
    <string name="deskripsi_checkin">Fitur ini membantu petugas dalam memantau anda selama anda berwisata, anda akan mudah terpantau, dengan demikian anda bisa aman selama wisata</string>
    <string name="deskripsi_himbauan">Pemerintah terkait biasanya akan memberikan informasi terkini dari negara tersebut terkait keamanan untuk para wisatawan yang sedang berkunjung. Beberapa negara seperti Korea Selatan, China, dan Jepang sepertinya sudah benar-benar tidak aman untuk dikunjungi wisatawan.</string>
    <string name="deskripsi_melindungi">Untuk mencegah penyebaran COVID-19: \n\n1. Cuci tangan Anda secara rutin. Gunakan sabun dan air, atau cairan pembersih tangan berbahan alkohol.\n\n2. Selalu jaga jarak aman dengan orang yang batuk atau bersin. Kenakan masker jika pembatasan fisik tidak dimungkinkan.\n\n3. Jangan sentuh mata, hidung, atau mulut Anda.\n\n4. Saat batuk atau bersin, tutup mulut dan hidung Anda dengan lengan atau tisu.\n\n5. Jangan keluar rumah jika merasa tidak enak badan.\n\n6. Jika demam, batuk, atau kesulitan bernapas, segera cari bantuan medis.</string>
    <string name="tandai">Tandai</string>
    <string name="siapkah_anda_berwisata_bersama_setrip">Mari berwisata secara sehat dan aman bersama SETRIP</string>
    <string name="tips_menghindari_covid_19_selama_berwisata_dengan_mudah">Tips menghindari Covid-19 selama berwisata dengan mudah</string>
    <string name="cari_wisata_favoritmu">Cari dan temukan\nWisata Favoritmu</string>
    <string name="mari_membaca">Mari membaca</string>
    <string name="yakin_ingin_menghapus">Apakah anda yakin ingin  menghapus postingan?</string>
    <string name="menghapus_postingan">Konformasi hapus postingan</string>
    <string name="beli_apd">Ingin berpergian namun belum memiliki APD ? \nKami memiliki solusinya</string>
    <string name="beli_alat_pelindung_diri_nsekarang">Beli Alat Pelindung Diri\nSekarang</string>
    <string name="buka_toko">Buka Toko</string>
    <string name="toko_saya">Toko Saya</string>
    <string name="tentang_fitur_ini">Tentang Fitur ini</string>
    <string name="nama_toko">Nama Toko</string>
    <string name="hubungi">Hubungi</string>
    <string name="harga">Harga</string>
    <string name="lokasi_anda">Lokasi anda</string>
    <string name="nama_barang">Nama barang</string>
    <string name="nomor_yang_dapat_dihubungi">Nomor yang dapat dihubungi</string>
    <string name="tambah_apd_baru">Tambah APD baru</string>
    <string name="not_empty">Kolom tidak boleh kosong</string>
    <string name="butuh_pemandu_wisata">Butuh pemandu wisata ?</string>
    <string name="ingin_berkarir_menjadi_pemandu_wisata">Ingin berkarir menjadi Pemandu Wisata ?</string>
    <string name="unggah_biodata">Unggah biodata</string>
    <string name="deskripsikan_singkat_diri_anda">Deskripsikan singkat diri anda</string>
    <string name="usia_anda">Usia anda</string>
    <string name="nama_anda">Nama anda</string>
    <string name="title_activity_maps_history">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="ubah_nomor_telepon">Ubah nomor telepon</string>
    <string name="silahkan_masukkan">Silahkan masukkan</string>
    <string name="nama_lengkap_baru">nama lengkap baru</string>
    <string name="nomor_handphone_baru">nomor handphone baru</string>
    <string name="alarm_satu_waktu">Alarm satu waktu</string>
    <string name="set_tanggal">Set tanggal</string>
    <string name="masukkan_pesan_untuk_pengingat_alarm">Masukkan pesan untuk pengingat alarm</string>
    <string name="set_alarm">Set alarm</string>
    <string name="setel_alarm_berulang">Setel alarm berulang</string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>
    <string name="alarm_manageer">Pengatur Alarm</string>
    <string name="konfirmasi_hubungi_penjual">Konfirmasi hubungi penjual APD</string>
    <string name="konfirmasi_hubungi_tour_guide">Konfirmasi hubungi tour guide</string>
    <string name="apakah_anda_yakin3">Apakah anda ingin menghubungi</string>

</resources>