<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/option_language"
        android:title="@string/bahasa"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/option_my_toko"
        android:title="@string/toko_saya"
        app:showAsAction="never"/>

    <item
        android:id="@+id/option_about_feature"
        android:title="@string/tentang_fitur_ini"
        app:showAsAction="never"/>

    <item
        android:id="@+id/option_add"
        android:title="Add Post"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_add_circle_outline_24" />

    <item
        android:id="@+id/option_setting"
        android:title="@string/option"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        android:title="search"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/option_open_toko"
        android:title="@string/buka_toko"
        app:showAsAction="ifRoom"
        />




</menu>