<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_tourism"
        android:title="@string/tourism"
        android:icon="@drawable/baseline_explore_black_24dp"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/colorAccent"/>

    <item
        android:id="@+id/nav_timeline"
        android:title="@string/beranda"
        android:icon="@drawable/ic_baseline_dashboard_24"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/colorAccent"/>

    <item
        android:id="@+id/nav_check"
        android:title="Cek"
        android:icon="@drawable/ic_baseline_check_circle_24"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/colorAccent"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profil"
        android:icon="@drawable/ic_baseline_face_24"
        app:cnb_textColor="@color/white"
        app:cnb_iconColor="@color/white"
        app:cnb_backgroundColor="@color/colorAccent"/>
</menu>