<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/full"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/image" />

        <TextView
            android:id="@+id/tv_keterangan_ubahnamanomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_masukkan_nama_anda"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/et_ubahnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/imput_nama"
            android:autofillHints="no"
            android:inputType="textPersonName" />




        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_dismiss_ubah"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_border"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="@string/batal"
                android:layout_marginEnd="16dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_ubah"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:layout_toEndOf="@+id/btn_dismiss_ubah"
                android:textAlignment="center"
                android:padding="10dp"
                android:text="@string/konfirmasi"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

        </RelativeLayout>





    </LinearLayout>

</LinearLayout>