<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    tools:context=".activity.Register">

    <TextView
        android:id="@+id/tv_purpose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:text="@string/register_purpose"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_username_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/imput_nama"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/et_email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawablePadding="10dp"
        android:hint="@string/hint_inputemail"
        android:inputType="textEmailAddress"
        android:padding="15dp" />

    <EditText
        android:id="@+id/et_phonenbr_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="no"
        android:background="@drawable/rounded_et"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:drawablePadding="10dp"
        android:hint="@string/nomor_handphone"
        android:inputType="number"
        android:padding="15dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_password"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/et_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_et"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:padding="15dp"
            android:autofillHints="no"
            android:inputType="textPassword"
            android:layout_marginBottom="10dp"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPasswordNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:visibility="gone"
        android:textColor="@android:color/holo_red_light"
        android:text="@string/maaf_password_anda_tidak_valid" />


    <com.spark.submitbutton.SubmitButton
        android:id="@+id/btn_register"
        android:layout_width="281dp"
        android:layout_height="281dp"
        android:onClick="register"
        android:text="@string/sign_up"
        android:textColor="#000000"
        app:sub_btn_background="@color/white"
        app:sub_btn_duration="3000"
        app:sub_btn_tick_color="@color/white"
        tools:ignore="OnClick" />
<!--    app:sub_btn_line_color=""-->
<!--    app:sub_btn_ripple_color=""-->


    </LinearLayout>






