<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TipsWisataAmanActivity"
    android:background="@color/colorPrimaryDark"
    >


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardBackgroundColor="@android:color/white"
        android:layout_gravity="center_vertical"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/judul_banner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tips Wisata Aman di tengah Wabah Covid-19"
                android:textAlignment="center"
                android:layout_marginTop="27dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/anda_wajib_membaca_ini" />


            <ImageView
                android:id="@+id/ilustrasi"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:src="@drawable/ilustrasi_traveling"
                android:contentDescription="@string/image" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="1. Selalu Gunakan Masker"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/deskripsi_masker" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="2. Rajin Cuci Tangan"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/deskripsi_cuci_tangan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="3. Rutin Cek Kesehatan dan Suhu Tubuh"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/deskripsi_cek_kesehatan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="4. Gunakan fitur Check-in/Check-out pada Aplikasi"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/deskripsi_checkin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5sp"
                android:text="5. Perhatikan Himbauan Pihak Berwajib"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_margin="5sp"
                android:text="@string/deskripsi_himbauan" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>



</ScrollView>